# cmpt201-coursework

./: LICENSE  README.md  proc.c
.nvim/: lab2.c.2025-09-21T19:56:04-07:00.hash  lab2.c.2025-09-21T19:56:04-07:00.nvim  proc.c.2025-09-17T13:24:55-07:00.hash  proc.c.2025-09-17T13:24:55-07:00.nvim
lab0/: a.out
lab0/.nvim/: lab0.c.2025-09-11T01:19:23-07:00.hash  lab0.c.2025-09-11T01:19:23-07:00.nvim
lab1/: a.out  lab1.c
lab1/.nvim/: lab1.c.2025-09-11T12:51:16-07:00.hash  lab1.c.2025-09-11T12:51:16-07:00.nvim  lab1.c.2025-09-11T13:05:05-07:00.hash  lab1.c.2025-09-11T13:05:05-07:00.nvim  lab1.c.2025-09-11T13:06:26-07:00.hash  lab1.c.2025-09-11T13:06:26-07:00.nvim  lab1.c.2025-09-11T13:10:18-07:00.hash  lab1.c.2025-09-11T13:10:18-07:00.nvim
lab2/: lab2.c
lab3/: lab3  lab3.c
lab3/.nvim/: lab3.c.2025-09-28T19:07:11-07:00.hash  lab3.c.2025-09-28T19:07:11-07:00.nvim
lab4/: lab4.c
lab4/.nvim/: lab4.c.2025-10-05T23:52:03-07:00.hash  lab4.c.2025-10-05T23:52:03-07:00.nvim
lab5/: lab5.c
lab5/.nvim/: lab5.c.2025-10-10T19:15:07-07:00.hash  lab5.c.2025-10-10T19:15:07-07:00.nvim
lab6/: CMakeLists.txt  example_1.c  example_2.c
lab6/.nvim/: CMakeLists.txt.2025-10-26T22:53:00-07:00.hash  example_1.c.2025-10-26T22:55:11-07:00.hash  example_1.c.2025-10-26T22:55:11-07:00.nvim  example_2.c.2025-10-26T22:57:35-07:00.hash  example_2.c.2025-10-26T22:57:35-07:00.nvim
lab7/: lab7.c
lab7/.nvim/: lab7.c.2025-11-02T20:05:43-08:00.hash  lab7.c.2025-11-02T20:05:43-08:00.nvim
lab8/: lab8.c
lab8/.nvim/: lab8.c.2025-11-16T19:59:13-08:00.hash  (+1 more)
lab9/: lab9.c
(+2 files in other folders)
